--- a/firstproject/templates/index.html
+++ b/firstproject/templates/index.html
@@ -22,21 +22,21 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         {% comment %} <img src="https://source.unsplash.com/1600x600/?cartography" class="d-block w-100" alt="..."> {% endcomment %}
-        <img src="/static/img/index_images/photo-1606933987885-1834b4d326bb.jpg" width="1370" height="480" alt="..."  >
+        <img src="C:/Users/dell/PycharmProjects/first_task/firstproject/static/img/index_images/img/index_images/photo-1606933987885-1834b4d326bb.jpg" width="1370" height="480" alt="..."  >
         <div class="carousel-caption d-none d-md-block">
           <h2><font color="black"> First Slide </font></h2>
         </div>
       </div>
       <div class="carousel-item" >
         {% comment %} <img src="https://source.unsplash.com/1600x600/?mapping" class="d-block w-100" alt="..."> {% endcomment %}
-        <img src="/static/img/index_images/photo-1628709518209-9b658b636d7f.jpg" width="1370" height="480"  alt="...">
+        <img src="C:/Users/dell/PycharmProjects/first_task/firstproject/static/img/index_images/img/index_images/photo-1628709518209-9b658b636d7f.jpg" width="1370" height="480"  alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2><font color="black"> Second Slide </font></h2>
         </div>
       </div>
       <div class="carousel-item">
         {% comment %} <img src="https://source.unsplash.com/1600x600/?worldmap" class="d-block w-100" alt="..."> {% endcomment %}
-        <img src="/static/img/index_images/photo-1592640845644-17d8a6ba0c90.jpg" width="1370" height="480" alt="...">
+        <img src="C:/Users/dell/PycharmProjects/first_task/firstproject/static/img/index_images/photo-1592640845644-17d8a6ba0c90.jpg" width="1370" height="480" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2><font color="white"> Third Slide </font></h2>
         </div>
