--- a/firstproject/templates/imageuploader/uploadimage_list.html
+++ b/firstproject/templates/imageuploader/uploadimage_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{%block title%} List of Images {% endblock title %}
+{%block title%} List {% endblock title %}
 
 
 {% block body %} 
