--- a/firstproject/templates/image_form.html
+++ b/firstproject/templates/image_form.html
@@ -19,7 +19,7 @@
 
     <meta https-equiv="X-UA-Compatible" content="ie=edge" />
 
-    {% comment %} <link rel="stylesheet" href="style.css" /> {% endcomment %}
+
       
     <style>
 
@@ -56,11 +56,11 @@
         height: 530px;
         overflow: hidden;
         display: block;
-        margin-left: 68%;
+        margin-left: 63.3%;
         position: absolute;
         top: 420px;
         background: white;
-        border: solid black 1px;
+        border: solid black 1px;}
 
       #form_shape{
 
@@ -80,7 +80,7 @@
 
 
 
-   
+
 
 
 
@@ -88,7 +88,7 @@
 
     <title> {%block title%} {% endblock title %}</title>
   </head>
-  <body style="background-color:silver">
+  <body style="background-color:#f1efa8">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">GIS Solutions</a>
@@ -123,9 +123,15 @@
 <br>
 <br>
 <br>
-
+ {% if messages %}
+ {% for message in messages %}
+   <div class="alert alert-dismissible alert-success">
+     <h5 align= center>{{message}}</h5>
+   </div>
+{% endfor %}
+{% endif %}
 <div class="container">
-  <h2 style="text-align:center; margin-top:40px; background: #3cb371; padding-top: 20px;padding-bottom: 20px;border-radius: 25px; box-shadow: 5px 10px 18px #F0F0F0; width:70%; margin-left: 15.3%; color:#fffefe;" > Add/Upload </h2>
+  <h2 style="text-align:center; font-size: 25px; margin-top:40px; background: #3cb371; padding-top: 12px;padding-bottom: 12px;border-radius: 25px; box-shadow: 5px 10px 18px #F0F0F0; width:38%; margin-left: 32.3%; color:#fffefe;" > Add/Upload </h2>
 </div>
 
 <br>
@@ -137,16 +143,16 @@
 
 
 {% comment %} display message when form is Succesfully submitted {% endcomment %}
-{% if img_obj %}  
-        <h3 align="center" style="margin-top:60px; display: inline; color:black; margin-left: 35%;"> <br>  <h2 align="center" style="margin-top:40px; color:green; display: inline; margin-left: 23.3%;">{{img_obj.form_id}}</h2></h3>  
+{% comment %} {% if img_obj %}  
+        <h2 align="center" style="margin-top:60px; display: inline; color:black; margin-left: 35%;"> <br> <div class="form_class" style="background-color:silver;  margin-top:60px; padding-left:2%; padding-top:9px; font-size:14px;">Succesfully submitted form with form id : </div></h2>
+          <h2 align="center" style="margin-top:40px; color:green; display: inline; margin-left: 23.3%;">{{img_obj.form_id}}</h2>  
          {% comment %}<img  src="{{ img_obj.image.url}}" alt="connect" style="margin-right: auto; margin-left: auto; display: block; width: 50%; height: 50%">   {% endcomment %}
-         
- {% endif %}
+  {% comment %}       
+ {% endif %} {% endcomment %}
 
 
 {% comment %} FORM starts here {% endcomment %}
-<div class="form_class" style="background-color:silver;  margin-top:60px; padding-left:2%; padding-top:9px; font-size:14px;">
-Succesfully submitted form with form id :
+
     <form method="post" enctype="multipart/form-data" id="image_submission_form"  > 
 
         {% csrf_token %}  
@@ -243,7 +249,7 @@ Succesfully submitted form with form id :
       <br>
       <br>
                 
-      <div class="form_shape" id="form_shape" style="background:#99CCCC; width:63%; margin-left: 3.4%; margin-top: 30px; border-style: outset;">
+      <div class="form_shape" id="form_shape" style="background:#c1dbd4;width: 60%;margin-left: 1.4%;margin-top: 30px;border-style: ridge;padding-top: 5.2%; padding-bottom: 3%;">
           <tr> 
               <th><label hidden for="id_form_id">Form id:</label>
                 
@@ -255,14 +261,11 @@ Succesfully submitted form with form id :
               </td>
             </tr>
          
-            <br>
-            <br>
-            <br>
-            <br>  
+
               
           
             <tr>
-              <th><label style="display: inline; margin-left:11%;" for="id_type_data"><b>Data Type:</b></label></th>
+              <th><label style="display: inline; margin-left:4%;" for="id_type_data">Data Type:</label></th>
               <td>
                 
                 <input type="text" name="type_data" readonly value="Massavi" maxlength="50" id="id_type_data">
@@ -274,11 +277,9 @@ Succesfully submitted form with form id :
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
+
                         <tr>
-              <th><label for="id_district"><b>District:</b></label></th>
+              <th><label for="id_district">District:</label></th>
               <td>
                 
                 <select name="district" id="id_district">
@@ -316,14 +317,13 @@ Succesfully submitted form with form id :
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;            
+
+
             <tr>
-              <th><label for="id_tehsil"><b>Tehsil:</b></label></th>
+              <th><label for="id_tehsil">Tehsil:</label></th>
               <td>
                 
-                <select name="tehsil" id="id_tehsil">
+                <select name="tehsil" id="id_tehsil" style="width:18.5%;">
           
             <option value="Abbotabad">Abbotabad</option>
           
@@ -361,10 +361,10 @@ Succesfully submitted form with form id :
           <br>
 
             <tr>
-              <th><label style="display: inline; margin-left:10.9%;" for="id_patwar_circle"><b>Patwar circle:</b></label></th>
+              <th><label style="display: inline; margin-left:4.1%;" for="id_patwar_circle">Patwar circle:</label></th>
               <td>
                 
-                <select name="patwar_circle" id="id_patwar_circle">
+                <select name="patwar_circle" id="id_patwar_circle" style="width:20.1%;">
           
             <option value="Abbotabad">Abbotabad</option>
           
@@ -399,19 +399,15 @@ Succesfully submitted form with form id :
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
+
+
             
             
                         <tr>
-              <th><label for="id_mauza"><b>Mauza:</b></label></th>
+              <th><label for="id_mauza" style="margin-left:0.3%;">Mauza:</label></th>
               <td>
                 
-                <select name="mauza" id="id_mauza">
+                <select name="mauza" id="id_mauza" style="width:17.6%;">
           
             <option value="Abbotabad" >Abbotabad</option>
           
@@ -446,17 +442,16 @@ Succesfully submitted form with form id :
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
+
+
             
             
             
             <tr>
-              <th><label for="id_massavi_no"><b>Massavi no:</b></label></th>
+              <th><label for="id_massavi_no">Massavi no:</label></th>
               <td>
                 
-                <select name="massavi_no" id="id_massavi_no" >
+                <select name="massavi_no" id="id_massavi_no" style="width:13.3%;" >
           
             <option value="Alif-1">Alif-1</option>
           
@@ -485,7 +480,7 @@ Succesfully submitted form with form id :
             <br>
             <br>
             <br>
-            <th><label style="display: inline; margin-left:11%;" for="id_image"><b>Image:</b></label></th>
+            <th><label style=" margin-left:4.37%;" for="id_image">Image:</label></th>
             <tr>
               <td>
                 
@@ -501,19 +496,20 @@ Succesfully submitted form with form id :
               </td>
             </tr>
 
-            
 
-
+          <br>
           
-          <td>
+
           {% comment %} Submit button {% endcomment %}
-          <div class="button_upload" style="margin-left: 330px">
-            <button style="margin-top:60px; background-color: #3cb371; color:white; font-size:17px; font-weight: bold; margin-left:23%; width:18%; border-color:#3cb371;" class = "btn btn-primary"  type="submit">Submit </button> 
+          <div class="button_upload" style="margin-left: 330px" >
+            <button style="margin-top:60px; background-color: #3cb371; color:white; font-size:17px; font-weight: bold; margin-left:2%; width: 10%;position: absolute; border-color:#3cb371;" class = "btn btn-primary"  type="submit" name="submit" id="submit"> Submit </button>
             {% comment %} <input type="reset" value="Reset Form" style="margin-top:90px;"> {% endcomment %}
           </div>
+
           <br>
-          </td>
-        </div>
+
+
+
         
           
           
@@ -534,8 +530,8 @@ Succesfully submitted form with form id :
 
     </form>  
 
-
 </div>
+
     
 
 
